css/nav_concept.css
#od-head #ms-nav{display: none;}
.clearfix{clear: both;height: 0;}
@font-face {
  font-family: 'Droid Serif';
  src: url('fonts/droidserif_regular/DroidSerif-Regular-webfont.eot');
  src: url('fonts/droidserif_regular/DroidSerif-Regular-webfont.eot?#iefix') format('embedded-opentype'),
       url('fonts/droidserif_regular/DroidSerif-Regular-webfont.woff') format('woff'),
       url('fonts/droidserif_regular/DroidSerif-Regular-webfont.ttf') format('truetype'),
       url('fonts/droidserif_regular/DroidSerif-Regular-webfont.svg#droid_serifregular') format('svg');

  font-weight: normal;
  font-style: normal;
}

/* boilerplate code*/
/*screen.css*/
#cNavNew li {
  list-style: none;
  float: left;
  margin-left: 0;
  overflow: hidden;
  display: table-cell;
  height: 29px
}
#cNavNew li.cur>ul {
  display: block
}
#cNavNew li a {
  font-size: 12px;
  color: #555;
  padding: 0 10px;
  text-decoration: none;
  display: inline-block;
  font-family: TheSansPlain;
  position: relative;
  height: 29px;
  line-height: 29px
}
#cNavNew li a .cNavState {
  width: 4px;
  height: 4px;
  position: absolute;
  margin-top: -5px;
  left: 50%;
  display: none
}
#cNavNew li .level2, #cNavNew li .level3 {
  display: none;
  position: absolute;
  left: 0;
  width: 845px;
  padding-left: 200px;
}
#cNavNew li .level2 {
  top: 29px;
  background: transparent!important;
}
#cNavNew li .level2 li, #cNavNew li .level2 a {
  height: 29px;
}
#cNavNew li .level2 li {
  /*background: url("/fileadmin/images/cNav_spacer.png") no-repeat;*/
  background-position: top right;
  margin: 0;
}
#cNavNew li .level2 li.menu-item{
  padding: 0;
  position: relative;
  left: 106px;
}

#cNavNew  li.country-2 .level2 li{
  left: 216px;
}

#cNavNew li.country-3 .level2 li{
  left: 336px;
}

#cNavNew li .level2 li.cur>a, #cNavNew li .level2 li.act>a, #cNavNew li .level2 li:hover>a {
  color: #0773B6;
}
#cNavNew li .level2 li.notcur>a, #cNavNew li .level2 li.notact>a {
  color: #0773B6;
}
#cNavNew li .level3 {
  top: 29px;
}
#cNavNew li .level3 li, #cNavNew li .level3 a {
  height: 29px;
}
#cNavNew li .level3 li.cur>a, #cNavNew li .level3 li.act>a, #cNavNew li .level3 li:hover>a {
  color: #0773B6;
}
#cNavNew li .level3 li.notcur>a, #cNavNew li .level3 li.notact>a {
  color: #0773B6;
}
#cNavNew.level1 li:hover .level2, #cNavNew .level2>li:hover .level3 {
  display: block;
}
#cNavNew.level1 li.act .level2 {
  display: block;
}
#cNavNew.level1 li.act .level2 li:hover .level3, #cNavNew.level1 li .level2 li.act .level3 {
  display: block;
}
.white #mainNav-inner .level1>li>a {
  color: #97d320;
}
.white #cNavNew {
  background: #97d320;
}
.white #cNavNew.level1>li>a {
  color: #fff;
}
.white #cNavNew.level1>li.notcur>a, .white #cNavNew.level1>li.notact>a {
  background: #07578b;
}
.blue #cNavNew .level2 {
  border-top: 1px solid #ddd;
  top: 29px;
}
.blue #cNavNew .level3 {
  top: 29px;
}
.blue #cNavNew li.cur>a, .blue #cNavNew li.act>a, .blue #cNavNew li:hover>a {
  color: #0773B6;
}
.blue #cNavNew li.notcur>a, .blue #cNavNew li.notact>a {
  color: #0773B6;
}

/*odm.css*/

.white #cNavNew.current-site-mekong {
  background: #373c6a;
  max-width: 100%;
  /*padding-left: 0!important;*/
}
.contentNavigation{background: #373c6a;}
/*header text*/

.white #headerText span a {
  color: #6393D2;
  text-decoration: none;
  font-family: 'Droid Serif', serif;
  font-size: 48px;
  font-weight: 700;
  letter-spacing: -2px;
}

/*level 1*/

.white #cNavNew.level1 {
  padding-top: 0px;
  padding-left: 40px;
}
#cNavNew .one-line {
  padding-top: 15px;
  padding-bottom: 20px;
  text-transform: uppercase;
}

/*.white #cNavNew.level1 img{width:45px!important;}*/

.white #cNavNew.level1 li.icon_menu {
  height: 45px;
  padding-top: 3px;
}

/*level 1 hover*/

.white #cNavNew.level1>li:hover {
  background: #6393D2;
  padding-bottom: 16px;
}
.white #cNavNew.level1>li:hover>a {
  /*background: #6393D2;*/
  background: transparent;
  color: white;
}
.mainNav-inner .level1 li:hover a{color: white;}
.mainNav-inner .level1 li:hover {background: #373c6a;}

#od-head h1{
  postion: relative;
  left: 40px;
  margin: 3px 0px;
}
#od-head h2.side-title{
  margin-top: 8px;
  padding-left: 14px;
}
/*level 2*/

li.top-topic {
  width: 200px;
  background: #6393D2;
  color: white;
  font-size: 16px;
 /* color: #555; */
 padding: 0 10px;
 text-decoration: none;
 display: inline-block;
 position: relative;
 font-weight: bold;
 text-transform: uppercase;
 /* height: 29px; */
  line-height: 29px;
  border-bottom: 1px solid white;
}
#cNavNew li .level2 li {
  clear: both;
}
#cNavNew li:hover .level2 {
  width: 220px;
  left: 548px;
  top: 60px;
  padding-left: 0;
  margin: 0;
}
#cNavNew li:hover .menu_environment {
  left: 40px;
}
#cNavNew li:hover .menu_economy {
  left: 105px;
}
#cNavNew li:hover .menu_people {
  left: 170px;
}
#cNavNew li:hover .level2 a {
  background: #6393D2;
  color: white;
  width: 200px;
  font-weight: normal;
}

/*level 2 hover*/

#cNavNew li .level2 li:hover>a {
  background: #292d56;
  color: white;
  width: 200px;
  /*padding-bottom: 20px;*/
  /*border-bottom: 1px solid white;*/
}
#cNavNew li .level2, #cNavNew li .level3 {
  -moz-box-shadow: none;
  -webkit-box-shadow: none;
  box-shadow: none;
}
#cNavNew.level1 li:hover .level2, #cNavNew .level2>li:hover .level3 {
  display: block;

}
#cNavNew .level2>li:hover .level3{
  background: transparent;
}

/*level 3*/

#cNavNew li .level3 {
    padding: 0;
    top: 29px;
}
/*#cNavNew li .level3 li {
    position: relative;
    right: 30px;
}*/
#cNavNew li .level3 li level3-by-country{height: 175px!important;}

/*general*/

[class^="icon-"], [class*=" icon-"] {
  display: inline;
  width: auto;
  height: auto;
  line-height: normal;
  vertical-align: baseline;
  background-image: none;
  background-position: 0% 0%;
  background-repeat: repeat;
  margin-top: 0;
}

.clearfix:after {
  content: ".";
  display: block;
  height: 0;
  clear: both;
  visibility: hidden;
  display: inline-block;
}

/*main menu*/

#mainNav,.mainNavinner,#mainNavElement{
  width: 110px;
  text-transform: uppercase;
}

.mainNav-inner {
    position: absolute;
    width: 140px;
    top: 340px;
}
.mainNavOdc {
  height: 100%;
  width: 140px;
  float: left;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 9999;
}
.mainNavOdc, .headerODM {
  background: #292d56;
}
.mainNav-logo {
  margin: 0 0 auto 30px;
  margin-left: 50px;
  margin-right: auto;
  float: none;
  font-size: 48px;
  position: relative;
  top:8px;
}

.admin-bar .mainNav-logo{
  top:40px;
}

.icon-od-logo{font-size: inherit;}
.icon-od-logo {
  font-family: 'icomoon';
}
.icon-od-logo:before {
  content: "\e600";
}
/* ul.level1 {
  height: 60px;
} */
.mainNav-inner .level1 li {
  margin: 0;
  padding: 0;
  list-style-type: none;
  display: block;
  width: inherit;
  text-align: right;
  border-top: 1px solid white;
  float: left;
}
.mainNav-inner .level1 li.last{border-bottom: 1px solid white;}
.mainNav-inner .level1 li a {
  color:white;
  text-decoration: none;
  line-height: 30px;
  padding-right: 10px;
  display: block;
  font-size: 16px;
  font-family: sans-serif;
  font-weight: bold;
}
.mainNav-inner ul.level1>li.act>a {
  padding-right: 12px;
  color: #0773B6;
  background: #fff;
  border-right: 1px solid #dddddd;
}
#mainNav-inner .level1 li a {
  font-family: sans-serif!important;
}

/*end boilerplate*/
/*#############################################################################################
############################################################################################*/


#od-head .organization{
  height: 70px;
}

.content_wrapper{
  margin-left: 110px;
  overflow: hidden;

}
/*top nav*/


.contentNavigation {
  width: 100%;
  height: 60px;
  color:#704C98;
  /*z-index: 100;*/
  /*margin-left: -30px;*/
}

#cNavNew {
  display: inline-block;
  position: relative;
  width: 100%;
  z-index: 8888;
  /*-moz-box-shadow: 0px 2px 3px 0px #ddd;
      -webkit-box-shadow: 0px 2px 3px 0px #ddd;
      box-shadow: 0px 2px 3px 0px #ddd;*/
  background: white;

}
#cNavNew li {
  list-style: none;
  float: left;
  margin-left: 0;
  overflow: hidden;
  display: table-cell;
  height: 29px;
}

  /*#cNavNew li:first-of-type{padding-left: 40px;}*/
#cNavNew .one-line, #cNavNew .menu-item {
  padding-top: 15px;
  padding-bottom: 20px;
  text-transform: uppercase;
}
#cNavNew li a {
  font-size: 12px;
  color: #555;
  padding: 0 10px;
  text-decoration: none;
  display: inline-block;
  font-family: TheSansPlain;
  position: relative;
  height: 29px;
  line-height: 29px;
}
#cNavNew li a {
  font-size: 12px;
  color: #555;
  padding: 0 10px;
  text-decoration: none;
  display: inline-block;
  font-family: sans-serif;
  font-weight: bold;
  position: relative;
  height: 29px;
  line-height: 29px;
}

.white #cNavNew.level1 li.icon_menu {
  height: 45px;
  padding-top: 3px;
}
#cNavNew .level2 li.by_country:hover{
  height: 174px;
}
#cNavNew .level2 li.by_type:hover{height: 100%;}
#cNavNew .level2>li.by_country:hover .level3{
  position: static;
  display: table-cell;
  padding-left: 0!important;
  width: 220px;
}

#cNavNew li:hover .level3 a {
    background: #292d56;
}

#cNavNew li:hover .level3 a:hover{
  background: #6393D2;
}
li.menu_environment img{
  width: 45px;
  height: auto;
  margin-top: 5px;
}

li.menu_economy img{
  width: 45px;
  margin-top: -1px;
}

li.menu_people img{
  height: 34px;
  padding-top: 8px;
}
/*header*/

header#od-head .icon-od-logo {
  display: none;
}

.mainNav-logo a:hover,.mainNav-logo a:active, .mainNav-logo a:visited, .mainNav-logo a{text-decoration: none;}

.category-container{
  margin-top:150px;
}

#site-intro {
  margin-top: 165px;
}

/*social*/
.social {
  text-align: right;
}

#live-search{
  width: 200px;
  display: inline-block;
  clear: none;
  float: right;
  margin: 0;
}

#live-search .container{
  position: static;
  width: 200px;
  margin-top: 10px;
}

#live-search input[type=text]{width: 180px;}

section#page-content{
  margin-top: 80px;
}

div#wrap-feedback {
  right: -40px;
  left: initial;
}

.sticky-posts.post-active .sticky-item.active article .post-thumbnail img{height: 50px!important;}

footer#colophon{
  overflow: hidden;
  background: #373c6a;
}

.qtranxs_language_chooser{
  float: left;
  position: absolute;
  left: 72px;
  top: 48px;
}
  .qtranxs_language_chooser li{
    float: left;
    margin: 0 5px;
  }
    .qtranxs_language_chooser li a{
      color: white;
    }
  .social.search.language{
    position: relative;
  }  

/*mozilla hack for misplaced logo*/
@-moz-document url-prefix() {
  .mainNav-logo {
     margin-top:-5px;

